--- a/src/sass/components/_nav-horizontal.scss
+++ b/src/sass/components/_nav-horizontal.scss
@@ -3,7 +3,7 @@
 .nav-horizontal {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     padding: 2rem 0;
 
     position: sticky;
