--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -21,3 +21,6 @@ $color-white: #fff;
 $color-black: #000;
 $color-red: #ea704e;
 $color-blue: #00c3d0; //05c1dc Also try these #, #02c4c4, #00c6b8
+
+// Measures
+$landing-nav-height: 7rem;
