--- a/src/sass/components/_features.scss
+++ b/src/sass/components/_features.scss
@@ -64,18 +64,24 @@
     }
 
     &__title {
-        display: inline-block;
-        background-image: linear-gradient(to right,
-                $color-primary-light, $color-primary-dark);
-        background-clip: text;
-        color: transparent;
-        font-size: 2.1rem;
-        font-weight: 800;
-        padding: 1rem 2rem;
-        border-radius: .3rem;
-        text-align: center;
 
-        transition: all .2s;
+        &,
+        &:link,
+        &:visited {
+            text-decoration: none;
+            display: inline-block;
+            background-image: linear-gradient(to right,
+                    $color-primary-light, $color-primary-dark);
+            background-clip: text;
+            color: transparent;
+            font-size: 2.1rem;
+            font-weight: 800;
+            padding: 1rem 2rem;
+            border-radius: .3rem;
+            text-align: center;
+
+            transition: all .2s;
+        }
     }
 
     &__text {
