Started register form

--- a/src/sass/components/index.scss
+++ b/src/sass/components/index.scss
@@ -3,6 +3,9 @@
 @forward "features";
 @forward "benefit";
 @forward "buttons";
+@forward "inputs";
+@forward "separators";
 @forward "niche-msg";
 @forward "bg-video";
 @forward "testimonial";
+@forward "register-form";
