--- a/src/css/style.css
+++ b/src/css/style.css
@@ -696,6 +696,19 @@ body {
   border-bottom: none;
 }
 
+.base-input-text {
+  font-family: inherit;
+  font-size: 1.6rem;
+  outline: none;
+  padding: 1.2rem 1.7rem;
+  border-radius: 1rem;
+  border: none;
+  color: #2d302e;
+}
+.base-input-text::placeholder {
+  color: #575a58;
+}
+
 .niche-msg {
   display: flex;
   flex-direction: column;
@@ -916,6 +929,84 @@ body {
 }
 .testimonial__author-title {
   color: #3c3f3d;
+}
+
+.register-form {
+  display: flex;
+  padding: 4rem;
+  background-color: #dde0de;
+  border-radius: 2rem;
+}
+.register-form__image-box {
+  flex: 1 0 50%;
+  overflow: hidden;
+  border-radius: inherit;
+}
+.register-form__image {
+  max-width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+.register-form__form-box {
+  background-color: orangered;
+  flex: 1 0 50%;
+  padding: 6rem 12rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: stretch;
+}
+.register-form__form-box > * {
+  background-color: yellowgreen;
+}
+.register-form__title {
+  font-size: 4rem;
+  font-weight: 400;
+  margin-bottom: 1rem;
+}
+.register-form__form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.register-form__input-box {
+  position: relative;
+}
+.register-form__input-box:not(:last-child) {
+  margin-bottom: 2rem;
+}
+.register-form__input {
+  border: 1px solid transparent;
+  width: 100%;
+}
+.register-form__input::placeholder {
+  transition: opacity 0.1s ease-out;
+  color: currentColor;
+}
+.register-form__input:focus {
+  border-color: #2FCA82;
+}
+.register-form__input:focus::placeholder {
+  color: transparent;
+}
+.register-form__input:focus + .register-form__label-text, .register-form__input:not(:placeholder-shown) + .register-form__label-text {
+  transform: translateY(4rem);
+  visibility: visible;
+  opacity: 1;
+}
+.register-form__label-text {
+  position: absolute;
+  top: 1.3rem;
+  left: 1.7rem;
+  font-size: 1.4rem;
+  font-family: inherit;
+  font-weight: 400;
+  color: #575a58;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.1s ease-out;
 }
 
 .landing {
