--- a/src/sass/components/index.scss
+++ b/src/sass/components/index.scss
@@ -3,9 +3,11 @@
 @forward "features";
 @forward "benefit";
 @forward "buttons";
+@forward "checkbox";
 @forward "inputs";
 @forward "separators";
 @forward "niche-msg";
 @forward "bg-video";
 @forward "testimonial";
 @forward "register-form";
+@forward "oauth-login";
