--- a/src/sass/pages/_register-page.scss
+++ b/src/sass/pages/_register-page.scss
@@ -2,5 +2,5 @@
 
 .register-page {
     display: grid;
-    grid-template-rows: [nav-start] $landing-nav-height [nav-end form-start] 60vh [form-end];
+    grid-template-rows: [nav-start] $landing-nav-height [nav-end form-start] min-content [form-end];
 }
