--- a/src/sass/components/_register-form.scss
+++ b/src/sass/components/_register-form.scss
@@ -7,6 +7,7 @@
     border-radius: 2rem;
     font-size: 1.6rem;
     backface-visibility: hidden;
+    box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
 
     &__image-box {
         flex: 0 0 40%;
@@ -75,7 +76,7 @@
         }
 
         &--terms {
-            margin-top: 1.5rem;
+            // margin-top: 1.5rem;
         }
     }
 
@@ -127,7 +128,10 @@
         }
 
         &--terms {
-            margin-left: 2rem;
+            display: flex;
+            align-items: center;
+            margin-left: 0rem;
+            cursor: pointer;
         }
     }
 
@@ -157,4 +161,25 @@
             box-shadow: 0 .25rem .5rem rgba($color-black, 0.05);
         }
     }
+
+    &__oauth-box {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 2rem;
+    }
+
+    &__checkbox {
+        // Opacity 0 instead of display none or visibility hidden to
+        // be able to be notified by the form validation
+        opacity: 0;
+
+        &:checked+.label-checkbox::before {
+            background-color: $color-primary;
+            content: "\2713";
+            font-size: 2rem;
+            color: $color-white;
+        }
+    }
+
 }
