--- a/src/css/style.css
+++ b/src/css/style.css
@@ -202,6 +202,10 @@ body {
   margin-bottom: 6rem;
 }
 
+.u-margin-top-small {
+  margin-top: 2rem;
+}
+
 .hero {
   position: relative;
   z-index: 10;
@@ -1119,11 +1123,205 @@ body {
 .register-form__checkbox {
   opacity: 0;
 }
+.register-form__checkbox + .label-checkbox::before {
+  border-color: #F78E2C;
+}
+.register-form__checkbox:hover + .label-checkbox::before {
+  border-color: #ffa45b;
+}
 .register-form__checkbox:checked + .label-checkbox::before {
-  background-color: #2FCA82;
+  border-color: #F78E2C;
+  background-color: #F78E2C;
   content: "✓";
   font-size: 2rem;
   color: #fff;
+}
+
+.login-form {
+  display: flex;
+  padding: 4rem;
+  background-color: #dde0de;
+  border-radius: 2rem;
+  font-size: 1.6rem;
+  backface-visibility: hidden;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+}
+.login-form__image-box {
+  flex: 0 0 50%;
+  overflow: hidden;
+  border-radius: inherit;
+}
+.login-form__image {
+  max-width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+.login-form__form-box {
+  flex: 1;
+  padding: 6rem 12rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: stretch;
+}
+.login-form__title-box {
+  margin-bottom: 4rem;
+}
+.login-form__title {
+  font-size: 4rem;
+  font-weight: 400;
+  margin-bottom: 1rem;
+}
+.login-form__form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.login-form__input-box {
+  position: relative;
+}
+.login-form__input-box:not(:last-child) {
+  margin-bottom: 2rem;
+}
+.login-form__input-box--remember {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 1rem;
+}
+.login-form__input-box .show-pass-box {
+  position: absolute;
+  right: 1.5rem;
+  top: 0rem;
+  transform: translateY(60%);
+  width: 2rem;
+  height: 2rem;
+  cursor: pointer;
+}
+.login-form__input-box .show-pass-box > * {
+  width: 100%;
+  height: 100%;
+  color: #2d302e;
+  transition: all 0.2s;
+}
+.login-form__input-box .show-pass-box > *:hover {
+  color: #575a58;
+}
+.login-form__input {
+  border: 1px solid transparent;
+  width: 100%;
+}
+.login-form__input::placeholder {
+  transition: opacity 0.1s ease-out;
+  color: currentColor;
+}
+.login-form__input:hover {
+  border-color: #4BDE94;
+}
+.login-form__input:focus {
+  border-color: #03B670;
+}
+.login-form__input:focus:invalid {
+  border-color: #ea704e;
+}
+.login-form__input:focus::placeholder {
+  color: transparent;
+}
+.login-form__input:focus + .login-form__label--input-text, .login-form__input:not(:placeholder-shown) + .login-form__label--input-text {
+  transform: translateY(4rem);
+  visibility: visible;
+  opacity: 1;
+}
+.login-form__label {
+  font-size: 1.4rem;
+  font-family: inherit;
+  font-weight: 400;
+  color: #575a58;
+}
+.login-form__label--input-text {
+  position: absolute;
+  top: 1.3rem;
+  left: 1.7rem;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.1s ease-out;
+}
+.login-form__label--remember {
+  display: flex;
+  align-items: center;
+  margin-left: 0rem;
+  cursor: pointer;
+  align-self: start;
+  order: -1;
+}
+.login-form__submit-button {
+  font-size: inherit;
+  background-image: linear-gradient(to right, #2FCA82, #2FCA82);
+  text-align: center;
+  padding: 2rem 0;
+  border-radius: 1rem;
+  font-weight: 500;
+  color: #2d302e;
+  transition: all 0.2s ease-out;
+}
+.login-form__submit-button:hover {
+  transform: translateY(-1px);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+  background-image: linear-gradient(to right, #2FCA82 0%, #4BDE94 100%);
+}
+.login-form__submit-button:active {
+  transform: translateY(0);
+  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.05);
+}
+.login-form__oauth-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+.login-form__oauth-box > *:hover {
+  border-color: #2FCA82 !important;
+}
+.login-form__oauth-box > *:active {
+  border-color: #03B670 !important;
+}
+.login-form__checkbox {
+  opacity: 0;
+}
+.login-form__checkbox:hover + .label-checkbox::before {
+  border-color: #4BDE94;
+}
+.login-form__checkbox:checked + .label-checkbox::before {
+  background-color: #2FCA82;
+  border-color: #2FCA82;
+  content: "✓";
+  font-size: 2rem;
+  color: #fff;
+}
+.login-form__forgot {
+  font-size: 1.4rem;
+  color: #03B670;
+  font-weight: 600;
+  cursor: pointer;
+}
+.login-form__forgot:hover {
+  color: #4BDE94;
+}
+.login-form__create-account {
+  font-size: 1.4rem;
+  margin-top: 4.5rem;
+  text-align: center;
+  color: #2d302e;
+}
+.login-form__create-account-link, .login-form__create-account-link:link, .login-form__create-account-link:visited {
+  text-decoration: none;
+  color: #03B670;
+  font-weight: 600;
+}
+.login-form__create-account-link:hover {
+  color: #4BDE94;
 }
 
 .oauth-login, .oauth-login:link, .oauth-login:visited {
