Styled and translated login form

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1191,27 +1191,34 @@ body {
   align-items: center;
   margin-top: 1rem;
 }
-.login-form__input-box .show-pass-box {
+.login-form__input-box .show-pass-box,
+.login-form__input-box .login-form__input-icon-box {
   position: absolute;
   right: 1.5rem;
-  top: 0rem;
+  top: 0.1rem;
   transform: translateY(60%);
   width: 2rem;
   height: 2rem;
   cursor: pointer;
 }
-.login-form__input-box .show-pass-box > * {
+.login-form__input-box .show-pass-box > *,
+.login-form__input-box .login-form__input-icon-box > * {
   width: 100%;
   height: 100%;
   color: #2d302e;
   transition: all 0.2s;
 }
-.login-form__input-box .show-pass-box > *:hover {
+.login-form__input-box .show-pass-box > *:hover,
+.login-form__input-box .login-form__input-icon-box > *:hover {
   color: #575a58;
+}
+.login-form__input-icon-box {
+  left: 1.5rem;
 }
 .login-form__input {
   border: 1px solid transparent;
   width: 100%;
+  padding-left: 4.5rem;
 }
 .login-form__input::placeholder {
   transition: opacity 0.1s ease-out;
@@ -1243,7 +1250,7 @@ body {
 .login-form__label--input-text {
   position: absolute;
   top: 1.3rem;
-  left: 1.7rem;
+  left: 3.8rem;
   visibility: hidden;
   opacity: 0;
   transition: all 0.1s ease-out;
