--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -24,3 +24,4 @@ $color-blue: #00c3d0; //05c1dc Also try these #, #02c4c4, #00c6b8
 
 // Measures
 $landing-nav-height: 7rem;
+$register-and-login-pages-margin-sides: 1rem;
