--- a/src/sass/components/_register-form.scss
+++ b/src/sass/components/_register-form.scss
@@ -1,6 +1,11 @@
 @use "../abstracts" as *;
 
 .register-form {
+    grid-column: center-start / center-end;
+    max-width: 136.5rem;
+    max-height: 88rem;
+    justify-self: center;
+
     display: flex;
     padding: 4rem;
     background-color: $color-grey-light-2;
@@ -9,8 +14,9 @@
     backface-visibility: hidden;
     box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
 
+
     &__image-box {
-        flex: 0 0 40%;
+        flex: 0 0 45%;
         overflow: hidden;
         border-radius: inherit;
     }
@@ -24,7 +30,8 @@
 
     &__form-box {
         flex: 1;
-        padding: 6rem 12rem;
+        padding: 6rem 0;
+        padding-left: 6rem;
 
         display: flex;
         flex-direction: column;
