--- a/src/sass/components/index.scss
+++ b/src/sass/components/index.scss
@@ -1,5 +1,6 @@
 @forward "hero";
 @forward "nav-horizontal";
+@forward "nav-vertical";
 @forward "features";
 @forward "benefit";
 @forward "buttons";
