--- a/src/sass/components/_login-form.scss
+++ b/src/sass/components/_login-form.scss
@@ -30,7 +30,7 @@
 
     &__form-box {
         flex: 1;
-        padding: 6rem 0;
+        padding: 6rem 1rem;
         padding-right: 6rem;
 
         display: flex;
