--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -4,6 +4,8 @@
     border: none;
     background-color: transparent;
     font-family: inherit;
+    font-size: inherit;
+    font-weight: inherit;
     transition: all .2s;
     text-align: left;
     cursor: pointer;
