--- a/src/sass/components/_nav-vertical.scss
+++ b/src/sass/components/_nav-vertical.scss
@@ -10,16 +10,32 @@
     &__list {
         list-style: none;
         width: 100%;
+        height: 100%;
         display: flex;
         flex-direction: column;
+        justify-content: flex-start;
     }
 
     &__item {
         width: 100%;
         height: 7rem;
 
+        &:first-child {
+            margin-top: 3rem;
+        }
+
         &:not(:last-child) {
             margin-bottom: 1rem;
+        }
+
+        &--logout {
+            margin-top: auto;
+            margin-bottom: 3rem;
+            font-weight: 500;
+
+            button {
+                width: 100%;
+            }
         }
     }
 
