--- a/src/sass/components/_nav-vertical.scss
+++ b/src/sass/components/_nav-vertical.scss
@@ -1,10 +1,12 @@
 @use "../abstracts/" as *;
 
 .nav-vertical {
+    position: relative;
     grid-column: nav-start / nav-end;
     grid-row: 1 / -1;
 
-    background-color: $color-grey-dark-5;
+    $nav-background-color: $color-grey-dark-5;
+    background-color: $nav-background-color;
     color: $color-grey-light-3;
 
     &__list {
@@ -104,6 +106,30 @@
         &>* {
             width: 100%;
             height: 100%;
+        }
+    }
+
+    &>button {
+        // To make the flag as background
+        position: absolute;
+        bottom: 0;
+        left: 1.5rem;
+        text-transform: uppercase;
+        width: 3.5rem;
+        height: 3.5rem;
+        text-align: center;
+        padding: 0;
+        background-color: rgba($nav-background-color, .7);
+        font-size: 1.1rem;
+
+        color: $color-grey-light-1;
+
+        &:hover {
+            color: $color-grey-light-2;
+        }
+
+        &:active {
+            color: $color-grey-light-3;
         }
     }
 }
